# zhl64

./: .gitignore  .gitmodules  CMakeLists.txt
include/: HookSystem.h  Overwatch2.h  libzhl.h
launcher/: dllmain.cpp
libzhl/: HookSystem.cpp  HookSystem_private.h  Log.cpp  Log.h  Overwatch2.cpp  SigScan.cpp  SigScan.h  dllmain.cpp  mologie_detours.h  mologie_detours_kms.h
libzhl/functions/: Global.zhl
libzhlgen/: ZHLLexer.cpp  ZHLLexer.h  ZHLParser.cpp  ZHLParser.h  ZHLParserBaseListener.cpp  ZHLParserBaseListener.h  ZHLParserBaseVisitor.cpp  ZHLParserBaseVisitor.h  ZHLParserListener.cpp  ZHLParserListener.h  ZHLParserVisitor.cpp  ZHLParserVisitor.h
modtest/: ImGui.cpp  dllmain.cpp
testenv/: WinMain.cpp
